Fix: Add Mandara link visibility in mobile navigation
Added missing ::after pseudo-element for Mandara navigation link in mobile view.
Previously, the 5th navigation item (MANDARA) was invisible on mobile because
font-size was set to 0 without a corresponding ::after content definition.

Changes:
- Added li:nth-child(5) a::after { content: 'MAN'; } in _nav.scss
- Recompiled CSS to dist/style.css

Now the mobile navigation shows: A | B | C | D | MAN | MAP | SET | LOGOUT

--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -108,6 +108,9 @@ nav.garages-nav {
       li:nth-child(4) a::after {
         content:'D';
       }
+      li:nth-child(5) a::after {
+        content:'MAN';
+      }
 
       li a {
         font-size:0;
